--- a/polybar/config
+++ b/polybar/config
@@ -28,7 +28,7 @@ secondary = #e60053
 alert = #bd2c40
 green = #4be349
 [bar/parrot]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 18
 ;offset-x = 0%
