--- a/i3/config
+++ b/i3/config
@@ -173,3 +173,14 @@ bindsym Control+Shift+l exec "i3lock"
 bindsym Mod1+section exec "bash ~/workplace/i3/startup.sh"
 bindsym $mod+Tab exec --no-startup-id "rofi -show"
 bindsym $mod+Shift+p exec "bash ~/workplace/i3/panic.sh"
+
+## Screenshots
+bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)"
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
+
+## Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
+
