--- a/i3/config
+++ b/i3/config
@@ -176,8 +176,8 @@ bindsym $mod+Shift+p exec "bash ~/workplace/i3/panic.sh"
 
 ## Screenshots
 # bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
-bindsym Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)"
-bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
+bindsym Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).png"
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date).png"
 
 ## Clipboard Screenshots
 # bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
